--- a/css/style.css
+++ b/css/style.css
@@ -7,67 +7,58 @@
   }
   .Velkommen {
     align-self: center;
-    font-size: 130px;
+    font-size: 8vw;
+    padding: 5vw;
   }
   
-  /* Style the header */
-  .header {
-    background-color: #f1f1f1;
-    padding: 20px;
-    text-align: center;
+  .center-container {
+    display: flex;
+    justify-content: center; /* Centrer indholdet horisontalt */
+    align-items: center;     /* Centrer indholdet vertikalt */
+    height: 100%;
   }
   
-  /* Style the top navigation bar */
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
+
+  img {
+    width: 20vw;
+    height: auto;     /* Billedet vil bevare sin originale højde-bredde-forhold */
+    margin-left: auto;
+    margin-right: auto;
   }
-  
-  /* Style the topnav links */
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Change color on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Create three unequal columns that floats next to each other */
-  .column {
-    float: left;
-    padding: 200px;
-    width: 33%;
-  }
-  
-  /* Left and right column */
-  .column.side {
-    padding: 110px;
-    width: 40%;
-  }
-  
-  /* Middle column */
-  .column.middle {
-    padding: 240px;
-    width: 60%;
-  }
-  
-  /* Clear floats after the columns */
-  .row::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column.side, .column.middle {
-      width: 100%;
-    }
-  }
+
+.item1 { 
+  grid-area: 1/1/2/5; 
+}
+.item2 { 
+  grid-area: 1/5/2/6;
+}
+.item3 { 
+  grid-area: 2/1/2/2; 
+}
+.item4 { 
+  grid-area: 2/2/2/3; 
+}
+.item5 { 
+  grid-area: 2/3/2/4; 
+}
+.item6 { 
+  grid-area: 2/4/2/5; 
+}
+.item7 { 
+  grid-area: 2/5/2/6; 
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+}
