--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,24 @@
   .Customrow{
     margin: 1.5vw;
   }
+  .content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 2s ease-out;
+    background-color: #f1f1f1;
+  }
+  .show{
+    max-height: 500px;
+  }
+  .collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
