--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     place-items: center;
   }
   .Customcon{
-    padding: 5vw;
+    padding: 5.5vw;
   }
   .Customrow{
     margin: 1.5vw;
@@ -28,7 +28,7 @@
     max-height: 0;
     overflow: hidden;
     transition: max-height 2s ease-out;
-    background-color: #f1f1f1;
+    background-color: #ffffff;
   }
   .show{
     max-height: 500px;
@@ -43,4 +43,25 @@
     text-align: left;
     outline: none;
     font-size: 15px;
+  }
+  .button {
+    background-color: #04AA6D; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  .button1 {
+    background-color: white; 
+    color: black; 
+  }
+  .button1:hover {
+    background-color: #04AA6D;
+    color: black; 
   }
