--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   .container{
     font-size: 1vw;
     display: flex;
-    align-items: center;
+    justify-content: center;
   }
   .Customcon{
     padding: 5.5vw;
