--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@
   }
   .Customcon{
     padding: 5.5vw;
+    display: flex;
+    justify-content: center;
+  }
+  .Customrow{
+    margin: 1.5vw;
   }
   .Customvel{
     padding: 2vw;
@@ -50,7 +55,7 @@
     background-color: #04AA6D; /* Green */
     border: none;
     color: white;
-    padding: 16px 32px;
+    padding: 8px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
