--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   
   body {
     margin: 0;
+    background-color: #333;
   }
   .Velkommen {
     font-size: 10vw;
@@ -25,6 +26,15 @@
   }
   .CustomPadding2{
     padding: 7vw;
+  }
+  .CustomPadding3{
+    border-radius: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 8px;
+  }
+  .customWidth{
+    max-width: 100%;
   }
   .content {
     padding: 0 18px;
@@ -66,11 +76,14 @@
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    white-space: nowrap;
+    font-size: 0;
   }
   
   li {
     float: left;
     border-right:1px solid #bbb;
+    font-size: 16px;
   }
   
   li:last-child {
