--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
     display: flex;
     justify-content: center;
   }
+  .container2{
+    font-size: 1vw;
+    display: flex;
+    justify-content: space-evenly;
+  }
   .CustomPadding{
     padding: 2vw;
   }
@@ -28,13 +33,13 @@
     padding: 7vw;
   }
   .CustomPadding3{
-    border-radius: 8px;
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-bottom: 8px;
+    padding: 3vw;
+  }
+  .imgCustom{
+    border-radius: 50%;
   }
   .customWidth{
-    max-width: 100%;
+    max-width: 70%;
   }
   .content {
     padding: 0 18px;
@@ -113,6 +118,27 @@
     'GRAD' 0,
     'opsz' 24
   }
+  .fa {
+    padding: 20px;
+    font-size: 25px !important;
+    width: 65px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 25%;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
 
   @media screen and (max-width: 767px){
     .mig2 {
@@ -121,6 +147,10 @@
     }
     .CustomPadding2{
       padding: 3.5vw;
+    }
+    .customWidth{
+      max-width: 51%;
+      min-width: 50%;
     }
   }
   
