--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
     padding: 7vw;
   }
   .CustomPadding3{
+    padding-top: 3vw;
     padding: 3vw;
   }
   .imgCustom{
@@ -126,6 +127,16 @@
     text-decoration: none;
     margin: 5px 2px;
     border-radius: 25%;
+  }
+
+  section {
+    display: none;
+    transition: opacity 0.5s ease-in-out;
+  }
+
+  section.show {
+    display: block;
+    opacity: 1;
   }
   
   .fa:hover {
