--- a/style.css
+++ b/style.css
@@ -2,6 +2,22 @@
     box-sizing: border-box;
   }
   
+  html{
+    scroll-padding-top: 50px;
+    scroll-behavior: smooth;
+  }
+  #navbar{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+
+  #navbar ul{
+    margin: 0;
+    padding: 0;
+  }
+
   body {
     margin: 0;
     background-color: #333;
@@ -124,6 +140,7 @@
     'GRAD' 0,
     'opsz' 24
   }
+
   .fa {
     padding: 20px;
     font-size: 25px !important;
@@ -137,6 +154,7 @@
   section {
     display: none;
     transition: opacity 0.5s ease-in-out;
+    padding-bottom: 100px;
   }
 
   section.show {
@@ -147,26 +165,85 @@
   .fa:hover {
       opacity: 0.7;
   }
+  
   .fa-linkedin {
     background: #007bb5;
     color: white;
   }
+
   .fa-instagram {
-    background: #125688;
+    background: #833ab4;
+    background: linear-gradient(
+      to right,
+      #833ab4,#fd1d1d,#fcb045
+    );
+    color: white;
+  }
+
+  .fa-github {
+    background: #000000;
     color: white;
   }
 
   @media screen and (max-width: 767px){
+
     .mig2 {
       min-width: 100px;
       max-width: 201px;
     }
+
     .CustomPadding2{
       padding: 3.5vw;
     }
+
+    .buttomPadding{
+      padding-bottom: 100px;
+    }
+
     .customWidth{
       max-width: 51%;
       min-width: 50%;
     }
+
+    #app {
+      padding-bottom: 100px; /* Øg padding på mindre skærme hvis nødvendigt */
+    }
+    
   }
   
+
+#app {
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 70px; /* Juster denne værdi efter behov */
+}
+
+.social-icons {
+  position: fixed;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icons a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  margin: 0 20px;
+  font-size: 24px;
+  color: #eaeaea;
+  border-radius: 50%;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.social-icons a:hover {
+  color: #fff;
+  background-color: #007bff;
+  transform: scale(1.1);
+}
