--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
   }
-  
+
   html{
     scroll-padding-top: 50px;
     scroll-behavior: smooth;
@@ -21,6 +21,8 @@
   body {
     margin: 0;
     background-color: #333;
+    background-image: url(billederTilWebApp/groovepaper.png);
+    background-repeat: repeat;
   }
   .Velkommen {
     font-size: 10vw;
@@ -82,7 +84,7 @@
     cursor: pointer;
   }
   .button1 {
-    background-color: white; 
+    background-color: transparent; 
     color: black;
     max-width: 70vw;
     display: block;
@@ -185,11 +187,11 @@
     color: white;
   }
 
-  @media screen and (max-width: 767px){
+  @media screen and (max-width: 768px){
 
     .mig2 {
-      min-width: 100px;
-      max-width: 201px;
+      min-width: 50%;
+      max-width: 66%;
     }
 
     .CustomPadding2{
